--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Odin Recipes</title>
 </head>
 <body>
-  
+  <h1>Odin Recipes</h1>
+  <ul>
+    <li><a href="/recipes/oven_roasted_grape_tomatoes.html">Oven Roasted Grape Tomatoes</a></li>
+    <li><a href="/recipes/garlic_mushrooms.html">Garlic Mushrooms</a></li>
+    <li><a href="/recipes/easy_garden_green_beans.html">Easy Garden Green Beans</a></li>
+  </ul>
 </body>
 </html>
